--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "frog": "latest",
     "hono": "^4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vercel": "^35.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
